--- a/compose.yml
+++ b/compose.yml
@@ -34,4 +34,6 @@ services:
       - "80:80"
     volumes:
       - ./fastapi_server/app:/code/app
+    command: 
+      ["uvicorn", "app.result_server:app", "--host", "0.0.0.0", "--port", "80"]
     #   sh -c "python watch_socket_test.py"
