--- a/fastapi_server/Dockerfile
+++ b/fastapi_server/Dockerfile
@@ -11,4 +11,4 @@ COPY ./requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 # 
-CMD ["uvicorn", "app.result_server:app", "--host", "0.0.0.0", "--port", "80"]
+# CMD ["uvicorn", "app.result_server:app", "--host", "0.0.0.0", "--port", "80"]
